--- a/styles/styleHome.css
+++ b/styles/styleHome.css
@@ -43,6 +43,14 @@ nav img {
   color: rgba(0, 0, 0, .9);
 }
 
+@media (max-width: 999px) {
+  .nav-list li {
+    padding: 5px;
+    font-size: 15px;
+    margin-left: 5px;
+  }
+}
+
 article {
   display: flex;
   align-items: center;
@@ -58,6 +66,21 @@ article div {
   padding: 30px;
   font-size: 25px;
 }
+@media (max-width: 1400px) {
+  article {
+    flex-wrap: wrap;
+  }
+  article img {
+    width: 350px;
+    margin: 100px auto 50px;
+  }
+  article div {
+    margin: 0 auto 50px;
+    padding: 20px;
+    font-size: 20px;
+    width: 400px;
+  }
+}
 
 section {
   text-align: center;
@@ -66,6 +89,11 @@ section iframe{
   width: 90vw;
   height: 70vh;
   border-radius: 10px;
+}
+@media (max-width: 999px) {
+  section iframe {
+    height: 50vh;
+  }
 }
 
 footer {
@@ -101,4 +129,27 @@ footer img {
 }
 #icons {
   list-style: none;
+}
+footer p {
+  padding: 10px;
+}
+@media (max-width: 999px) {
+  footer div{
+    flex-wrap: wrap;
+  }
+  footer img {
+    width: 40vw;
+    margin: auto;
+  }
+  #redes {
+    padding: 20px;
+    font-size: 20px;
+  }
+  #icons img {
+    width: 4vw;
+    margin-left: 5px;
+  }
+  footer p {
+    margin-top: 20px;
+  }
 }
